@@ -351,3 +351,11 @@ platform_capture_get_fileno (platform_camera_t * craw)
 {
     return craw->iso_fd;
 }
+
+dc1394bool_t
+platform_capture_is_frame_corrupt (platform_camera_t * craw,
+        dc1394video_frame_t * frame)
+{
+    return DC1394_FALSE;
+}
+
